--- a/about.html
+++ b/about.html
@@ -14,9 +14,9 @@
     <header class="header container">
       <nav>
         <ul class="header__nav">
-          <li class="header__link"><a href="index.html">HOME</a></li>
-          <li class="header__link"><a href="about.html">O NAMA</a></li>
-          <li class="header__link"><a href="proizvodi.html">PROIZVODI</a></li>
+          <li class="header__link"><a href="./index.html">HOME</a></li>
+          <li class="header__link"><a href="./about.html">O NAMA</a></li>
+          <li class="header__link"><a href="./proizvodi.html">PROIZVODI</a></li>
           <li class="header__link">KONTAKT</li>
         </ul>
       </nav>
