--- a/proizvodi.html
+++ b/proizvodi.html
@@ -14,10 +14,10 @@
     <header class="header container">
         <nav>
           <ul class="header__nav">
-            <li class="header__link"><a href="index.html">HOME</a></li>
-            <li class="header__link"><a href="about.html">O NAMA</a></li>
-            <li class="header__link"><a href="proizvodi.html">PROIZVODI</a></li>
-            <li class="header__link">KONTAKT</li>
+            <li class="header__link"><a href="./index.html">HOME</a></li>
+          <li class="header__link"><a href="./about.html">O NAMA</a></li>
+          <li class="header__link"><a href="./proizvodi.html">PROIZVODI</a></li>
+          <li class="header__link">KONTAKT</li>
           </ul>
           <button class="header__bars">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
