--- a/index.html
+++ b/index.html
@@ -80,12 +80,18 @@
           </div>
       </section>
       <section class="more container section">
+        <div class="custom-shape-divider-top-1709117938">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+              <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+          </svg>
+      </div>
           <p class="more__desc">
             Smještena u srcu našeg grada, Cvjećarnica Kala je više odobične cvjećarnice - to je mjesto gdje se rađaju čarolija i nezaboravnitrenuci. Naša misija je oblikovati vaše emocije kroz cvjetnu umjetnost,stvarajući aranžmane koji pričaju priče i bude sjećanja. Pridružite nam se uputovanju kroz boje, mirise i ljepotu cvijeta u Cvjećarnici Kala.
           </p>
           <p class="more__desc">
             Ova mala oda Cvjećarnici Kala samo je mali uvid u bogatstvoiskustva koje nudimo. Pridružite nam se u istraživanju svijeta cvjetneelegancije i dopustite nam da zajedno stvorimo trenutke koji će ostati urezaniu vašem sjećanju.
           </p>
+          
       </section>
       <section class="gallery container section">
           <h1 class="gallery__title">Galerija</h1>
